[18.0][FIX] web_responsive: submenu display on mobile devices and style enhancements

--- a/web_responsive/static/src/components/apps_menu/apps_menu.scss
+++ b/web_responsive/static/src/components/apps_menu/apps_menu.scss
@@ -1,6 +1,7 @@
 /* Copyright 2018 Tecnativa - Jairo Llopis
  * Copyright 2021 ITerra - Sergey Shebanin
  * Copyright 2023 Taras Shabaranskyi
+ * Copyright 2025 Kevodoo - Kevin Dominguez
  * License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). */
 
 :root {
@@ -39,6 +40,10 @@
 .o_apps_menu_opened .o_main_navbar {
     .o_menu_brand,
     .o_menu_sections {
+        display: none !important;
+    }
+
+    .o_menu_brand_icon {
         display: none !important;
     }
 }
@@ -85,9 +90,10 @@
     background-clip: border-box;
     padding: 1rem 0.5rem;
     gap: 1rem;
-    background: var(--app-menu-background);
+    // background: var(--app-menu-background);
     background-size: cover;
     border-radius: 0;
+    top: var(--o-navbar-height);
     // Display apps in a grid
     align-content: flex-start;
     display: flex !important;
@@ -105,5 +111,117 @@
             left: calc((100vw - 850px) / 2);
             right: calc((100vw - 850px) / 2);
         }
+    }
+}
+
+.o_main_navbar {
+    --o-navbar-height: 46px;
+    --Dropdown_menu-margin-y: 0;
+    display: flex;
+    height: var(--o-navbar-height);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 0;
+    font-size: 0.875rem;
+}
+
+.o_main_navbar .o_menu_brand,
+.o_main_navbar .o_navbar_apps_menu .dropdown-toggle,
+.o_main_navbar .o_nav_entry,
+.o_main_navbar .dropdown-toggle:not(.o-dropdown-toggle-custo),
+.o_main_navbar .o_menu_toggle {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: calc(var(--o-navbar-height) - 20px);
+    border-radius: 0.25rem;
+    user-select: none;
+    background: transparent;
+    font-size: 1em;
+    color: var(--NavBar-entry-color, #1f2937);
+
+    &:hover {
+        color: #111827;
+    }
+}
+
+.o_main_navbar .o_menu_brand,
+.o_main_navbar .o_navbar_breadcrumbs,
+.o_main_navbar .o_navbar_breadcrumbs .btn {
+    color: var(--NavBar-brand-color, #374151);
+
+    &:hover {
+        color: #111827;
+    }
+}
+
+.o_main_navbar .o_menu_brand {
+    padding-left: 0;
+    font-size: 1.2em;
+}
+
+.o_main_navbar .o_menu_toggle {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: calc(var(--o-navbar-height) - 20px);
+    border-radius: 0.25rem;
+    user-select: none;
+    background: transparent;
+    font-size: 1em;
+    color: var(--NavBar-entry-color, #1f2937);
+
+    &:hover {
+        color: #111827;
+    }
+}
+
+.o_grid_apps_menu__button {
+    min-height: auto;
+}
+
+@media (min-width: 768px) {
+    .o_main_navbar .o_menu_toggle .o_menu_brand_icon {
+        width: auto;
+    }
+}
+
+.o_apps_menu_opened .o_main_navbar {
+    background: transparent !important;
+    border-bottom-color: transparent !important;
+}
+
+.o_apps_menu_opened,
+.o_web_client.o_apps_menu_opened {
+    &[data-theme="milk"] {
+        background-image: url("../../img/home-menu-bg-overlay.svg"),
+            linear-gradient(
+                to bottom,
+                #{$app-menu-background-color},
+                #{desaturate(lighten($app-menu-background-color, 20%), 15)}
+            );
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &[data-theme="community"] {
+        background-image: url("../../img/home-menu-bg-overlay.svg"),
+            linear-gradient(
+                to bottom,
+                #{$o-brand-primary},
+                #{desaturate(lighten($o-brand-primary, 20%), 15)}
+            );
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    .o_action_manager {
+        opacity: 0;
     }
 }
