--- a/web_responsive/static/src/legacy/scss/primary_variable.scss
+++ b/web_responsive/static/src/legacy/scss/primary_variable.scss
@@ -16,3 +16,5 @@ $app-menu-box-shadow-highlight:
     0 4px 4px rgba(0, 0, 0, 0.026),
     0 8px 8px rgba(0, 0, 0, 0.026),
     0 16px 16px rgba(0, 0, 0, 0.026) !default;
+
+$o-navbar-background: #ffffff;
